--- a/NuGet_Tracker_Package/NuGet_Tracker_Package.csproj
+++ b/NuGet_Tracker_Package/NuGet_Tracker_Package.csproj
@@ -7,10 +7,12 @@
     <Company>CT</Company>
     <Product>EventTriggerHandler</Product>
     <Description>Used to send event triggers to an external webhook.</Description>
-    <Version>1.1.195</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
